--- a/web-basics/01-html/05-표.html
+++ b/web-basics/01-html/05-표.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <table>
+        <caption>2022년 베스트셀러</caption>
         <tr>
             <th>순위</th>
             <th>도서명</th>
