--- a/web-basics/01-html/05-표.html
+++ b/web-basics/01-html/05-표.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>표</title>
+    <style>
+        table, td, th {
+            border: 1px solid lightcoral;
+        }
+</style>
 </head>
 <body>
     <table>
