--- a/web-basics/01-html/05-표.html
+++ b/web-basics/01-html/05-표.html
@@ -8,6 +8,9 @@
         table, td, th {
             border: 1px solid lightcoral;
         }
+        td, th {
+            padding: 2px 8px 2px 8px;
+        }
 </style>
 </head>
 <body>
