--- a/web-basics/01-html/00-살펴보기.html
+++ b/web-basics/01-html/00-살펴보기.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>테스트</title>
+    <title>00 살펴보기</title>
     <link rel="stylesheet" href="00-살펴보기.css">
     <style>
         h1 {
