--- a/web-basics/01-html/01-텍스트-태그.html
+++ b/web-basics/01-html/01-텍스트-태그.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트 태그</title>
+    <title>01 텍스트 태그</title>
 </head>
 <body>
     <!-- 주석은 이렇게 씁니다. -->
