--- a/web-basics/01-html/05-표.html
+++ b/web-basics/01-html/05-표.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>표</title>
+    <title>05 표</title>
     <style>
         td, th {
             padding: 2px 8px 2px 8px;
