--- a/web-basics/01-html/02-텍스트-형식-지정.html
+++ b/web-basics/01-html/02-텍스트-형식-지정.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트 형식 지정</title>
+    <title>02 텍스트 형식 지정</title>
 </head>
 <body>
     <h1>HTML 텍스트 형식 지정 예제</h1>
