--- a/web-basics/01-html/03-하이퍼링크.html
+++ b/web-basics/01-html/03-하이퍼링크.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>하이퍼링크</title>
+    <title>03 하이퍼링크</title>
 </head>
 <body>
     <h1 id="h1">하이퍼링크 예제</h1>
