--- a/web-basics/01-html/04-목록-태그.html
+++ b/web-basics/01-html/04-목록-태그.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>목록 태그</title>
+    <title>04 목록 태그</title>
 </head>
 <body>
     <h1>짜과게티 끓이기</h1>
