--- a/web-basics/01-html/07-멀티미디어.html
+++ b/web-basics/01-html/07-멀티미디어.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>07 멀티미디어</title>
 </head>
+
 <body>
     <h1>멀티미디어 태그</h1>
 
     <audio src="resources/spring.mp3" controls></audio>
     <video src="resources/flight.mp4" controls></video>
+    <hr>
+    <iframe width="100%" height="400" src="https://www.youtube-nocookie.com/embed/Zbo7UY8dxh8?si=BONsLRwePBJW2eee"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
 </html>
