구악까몰이

--- a/web-basics/01-html/08-레시피.html
+++ b/web-basics/01-html/08-레시피.html
@@ -13,8 +13,11 @@
             font-family: Pretendard, 'Courier New', Courier, monospace;
             font-size: large;
         }
+        li {
+            padding: 4px 0 0 0;
+        }
         th, td {
-            padding: 4px;
+            padding: 6px;
         }
         th {
             background-color: coral;
