--- a/web-basics/01-html/08-레시피.html
+++ b/web-basics/01-html/08-레시피.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🥑 Guacamole</title>
+    <title>🥑 구악까몰이 🥗</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <style>
         body {
