--- a/web-basics/02-css/01-선택자.html
+++ b/web-basics/02-css/01-선택자.html
@@ -12,17 +12,17 @@
 <body>
     <h1>선택자</h1>
 
-    <div>
-        <div>
+    <div id="main-container">
+        <div class="container">
             <h2>웹프로그래밍 기초</h2>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Javascript</li>
+                <li>JavaScript</li>
             </ul>
         </div>
 
-        <div>
+        <div class="container margin-top">
             <h2>참고 사이트</h2>
             <ul>
                 <li><a href="https://www.w3.org/" target="_blank">W3C</a> </li>
