--- a/web-basics/04-dom/3_이벤트/03_이벤트_이벤트리스너메서드_배포.html
+++ b/web-basics/04-dom/3_이벤트/03_이벤트_이벤트리스너메서드_배포.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <h3 style="color: green">DOM요소의 이벤트핸들러 속성 방식</h3>
-  <p>DOM요소.on이벤트 = 이벤트핸들러</p>
+  <h3 style="color: violet">addEventListener 메서드 방식</h3>
+  <p>DOM요소.addEventListner("이벤트", 이벤트핸들러)</p>
   <button class="btn1">button1</button>
   <button class="btn2">button2</button>
   <button class="btn3">button3</button>
@@ -23,9 +23,9 @@
     const $btn2 = document.querySelector(".btn2");
     const $btn3 = document.querySelector(".btn3");
 
-    $btn1.onclick = () => updateText(1);
-    $btn2.onclick = () => updateText(2);
-    $btn3.onclick = () => updateText(3);
+    $btn1.addEventListener("click", () => updateText(1));
+    $btn2.addEventListener("click", () => updateText(2));
+    $btn3.addEventListener("click", function () { updateText(3); });
   </script>
 </body>
 
