--- a/web-basics/04-dom/4_todolist/index.html
+++ b/web-basics/04-dom/4_todolist/index.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Todo List</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 </head>
 
 <body>
   <div class="container">
     <h1>Todo List</h1>
-    <input type="text" id="input-todo" placeholder="여기에 할 일을 적어주세요." required />
-    <button id="btn-add">추가</button>
-
+    <div class="input-container">
+      <input type="text" id="input-todo" placeholder="여기에 할 일을 적어주세요." required />
+      <button id="btn-add">추가</button>
+    </div>
     <ul id="todo-list">
       <li class="todo-item">
         <input type="checkbox" />
