--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -21,11 +21,13 @@
       <li class="todo-item">
         <input type="checkbox" />
         <span>미완료</span>
+        <span class="finished-at">2025년 7월 3일 5시 48분</span>
         <button class="delete-btn">삭제</button>
       </li>
-      <li class="todo-item">
+      <li class="todo-item completed">
         <input type="checkbox" />
         <span class="completed">완료</span>
+        <span class="finished-at">2025년 7월 3일 5시 48분</span>
         <button class="delete-btn">삭제</button>
       </li>
       <!-- 할 일 목록이 여기에 동적으로 추가됩니다 -->
